# unified_memory

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  install.sh  start_uams.sh  uams
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
AI/: README.md
AI/AgentMemories/: README.md
AI/Embeddings/: README.md
AI/KnowledgeGraph/: README.md
AI/RetrievalCache/: README.md
AI/Summaries/: README.md
Assets/: README.md
Concepts/: README.md
Conversations/: README.md
Daily/: README.md
Logs/: README.md
People/: README.md
Projects/: README.md
Research/: README.md
Tasks/: README.md
memory_watcher/: Dockerfile.api  docker-compose.yml  knowledge_graph.html  knowledge_graph.json  main.py  requirements.txt  start.sh
memory_watcher/api/: main.py  memory_writer.py  models.py  procedure_reader.py
memory_watcher/chunkers/: semantic.py
memory_watcher/embeddings/: cache.py  generator.py  utils.py
memory_watcher/examples/: benchmark_chunking.py  benchmark_compression.py  benchmark_distillation.py  benchmark_embeddings.py  benchmark_graph.py  benchmark_graph_retrieval.py
memory_watcher/graph/: extractor.py  store.py  updater.py
memory_watcher/intelligence/: distiller.py
uams_sdk/: README.md  pyproject.toml
uams_sdk/examples/: hermes_integration.py  mcp_config.json  middleware_lifecycle.py  openclaw_integration.py
uams_sdk/uams_sdk/: __init__.py  cache.py  client.py  exceptions.py  mcp_server.py  middleware.py
(+34 files in other folders)
