[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uams-sdk"
version = "1.0.0"
description = "Shared Memory SDK for Hermes and OpenClaw targeting the Unified Agent Memory System."
authors = [{ name = "Shivam Sharma" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cachetools>=5.3.0",
    "mcp[cli]>=1.12.4,<1.13"
]

[project.scripts]
uams-mcp = "uams_sdk.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
